--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -224,19 +224,7 @@ h6 {
 
 .footer {
   margin: 0;
-  padding-top: 300px;
-  background-image: url(../images/footer.png);
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: cover;
-  color: #fff;
-  a,
-  h3 {
-    color: #fff;
-    &:hover {
-      color: $primary;
-    }
-  }
+  padding-top: 20px;
   h3 {
     text-transform: uppercase;
   }
@@ -247,6 +235,15 @@ h6 {
   }
   p {
     line-height: 2;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    a {
+      text-transform: capitalize;
+      line-height: 2;
+    }
   }
   .copyright {
     padding-top: 20px;
