--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -394,7 +394,7 @@ h6 {
     position: relative;
     z-index: 1;
     display: flex;
-
+    min-height: 400px;
     h1 {
       text-transform: uppercase;
       font-weight: bold;
