--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -636,7 +636,7 @@ h6 {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  background-image: url("../images/home/book-bg.png?v=use6yde3");
+  background-image: url("../images/home/book-bg.png?v=8y56xm9d");
 }
 .section-call .row {
   align-items: center;
@@ -697,10 +697,10 @@ h6 {
   border-radius: 300px 0 0 300px;
 }
 .section-case .carousel button .carousel-control-prev-icon {
-  background-image: url(../images/home/icon/arrow-left.svg?v=use6yde3);
+  background-image: url(../images/home/icon/arrow-left.svg?v=8y56xm9d);
 }
 .section-case .carousel button .carousel-control-next-icon {
-  background-image: url(../images/home/icon/arrow-right.svg?v=use6yde3);
+  background-image: url(../images/home/icon/arrow-right.svg?v=8y56xm9d);
 }
 .section-case .carousel .case-img {
   overflow: hidden;
