--- a/static/styles/cartoon.scss
+++ b/static/styles/cartoon.scss
@@ -131,3 +131,10 @@ $steam-speed: 5s;
   justify-content: space-between;
   align-items: flex-end;
 }
+
+.streamer-bar {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+}
