--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -317,8 +317,7 @@ body {
   background-color: #a8cb26;
 }
 .header-navbar .navbar-brand img {
-  width: 150px;
-  height: 39px;
+  height: 80px;
 }
 .header-navbar .nav-item {
   position: relative;
@@ -395,7 +394,7 @@ h6 {
   text-transform: uppercase;
 }
 .footer svg {
-  fill: #fff;
+  fill: #666;
   width: 20px;
   height: 20px;
 }
@@ -531,6 +530,67 @@ h6 {
   transform: translateY(-50%) rotate(0deg);
 }
 
+.round-img {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 20px solid rgba(0, 0, 0, 0.4);
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+}
+.round-img img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s ease-in-out;
+}
+.round-img:hover {
+  border: 20px solid rgba(0, 0, 0, 0.2);
+}
+.round-img:hover img {
+  transform: scale(1.1);
+}
+
+.trapezoid {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  line-height: 50px;
+  color: #fff;
+  text-align: center;
+  transition: all 0.4s ease-in-out;
+  margin-left: -20px;
+}
+.trapezoid span {
+  font-size: 20px;
+  font-weight: 500;
+  display: inline-block;
+  text-align: center;
+  background: #ffc999;
+  position: relative;
+  margin-left: -20px;
+  padding-right: 40px;
+  transition: all 0.4s ease-in-out;
+}
+.trapezoid:before {
+  content: "";
+  display: inline-block;
+  background: #ffc999;
+  width: 50px;
+  height: 50px;
+  transform: skew(10deg);
+  border-radius: 0 0 0 15px;
+  transition: all 0.4s ease-in-out;
+}
+.trapezoid:hover span, .trapezoid.active span {
+  background: #212529;
+}
+.trapezoid:hover:before, .trapezoid:hover:after, .trapezoid.active:before, .trapezoid.active:after {
+  background: #212529;
+}
+
 .home-carousel {
   position: relative;
   z-index: 1;
@@ -636,7 +696,7 @@ h6 {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  background-image: url("../images/home/book-bg.png?v=li91r7hs");
+  background-image: url("../images/home/book-bg.png?v=6b7uxful");
 }
 .section-call .row {
   align-items: center;
@@ -697,10 +757,10 @@ h6 {
   border-radius: 300px 0 0 300px;
 }
 .section-case .carousel button .carousel-control-prev-icon {
-  background-image: url(../images/home/icon/arrow-left.svg?v=li91r7hs);
+  background-image: url(../images/home/icon/arrow-left.svg?v=6b7uxful);
 }
 .section-case .carousel button .carousel-control-next-icon {
-  background-image: url(../images/home/icon/arrow-right.svg?v=li91r7hs);
+  background-image: url(../images/home/icon/arrow-right.svg?v=6b7uxful);
 }
 .section-case .carousel .case-img {
   overflow: hidden;
@@ -752,7 +812,19 @@ h6 {
   max-width: 680px;
 }
 
+.about .owner {
+  width: 320px;
+  height: 320px;
+}
+.about .owner img {
+  width: 320px;
+  height: 320px;
+}
+
 @media (max-width: 1024px) {
+  .header-navbar .navbar-brand img {
+    height: 40px;
+  }
   .section {
     padding-top: 40px;
     padding-bottom: 40px;
