--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -742,6 +742,10 @@ h6 {
 .home-carousel h1 {
   text-transform: uppercase;
   font-weight: bold;
+  color: #fff;
+}
+.home-carousel p {
+  color: #fff;
 }
 .home-carousel-nav {
   display: -webkit-flex;
@@ -801,12 +805,11 @@ h6 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../images/home/carousel/bg.jpg?v=wdygd16n);
+  background-image: url(../images/home/carousel/bg.jpg?v=sjf9h9sx);
   background-repeat: no-repeat;
   background-position: center center;
   -o-background-size: cover;
      background-size: cover;
-  opacity: 0.1;
   z-index: -1;
 }
 .section-banner .row {
@@ -902,7 +905,7 @@ h6 {
   background-position: center center;
   -o-background-size: cover;
      background-size: cover;
-  background-image: url("../images/home/book-bg.png?v=wdygd16n");
+  background-image: url("../images/home/book-bg.png?v=sjf9h9sx");
 }
 .section-call .row {
   -webkit-align-items: center;
@@ -994,10 +997,10 @@ h6 {
   border-radius: 300px 0 0 300px;
 }
 .section-case .carousel button .carousel-control-prev-icon {
-  background-image: url(../images/home/icon/arrow-left.svg?v=wdygd16n);
+  background-image: url(../images/home/icon/arrow-left.svg?v=sjf9h9sx);
 }
 .section-case .carousel button .carousel-control-next-icon {
-  background-image: url(../images/home/icon/arrow-right.svg?v=wdygd16n);
+  background-image: url(../images/home/icon/arrow-right.svg?v=sjf9h9sx);
 }
 .section-case .carousel .case-img {
   overflow: hidden;
