--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -467,6 +467,10 @@ h6 {
     h1 {
       text-transform: uppercase;
       font-weight: bold;
+      color: #fff;
+    }
+    p {
+      color: #fff;
     }
 
     &-nav {
@@ -523,7 +527,7 @@ h6 {
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
-      opacity: 0.1;
+
       z-index: -1;
     }
     padding: 0;
