--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -805,7 +805,7 @@ h6 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../images/home/carousel/bg.jpg?v=sjf9h9sx);
+  background-image: url(../images/home/carousel/bg.jpg?v=mal1imp3);
   background-repeat: no-repeat;
   background-position: center center;
   -o-background-size: cover;
@@ -905,7 +905,7 @@ h6 {
   background-position: center center;
   -o-background-size: cover;
      background-size: cover;
-  background-image: url("../images/home/book-bg.png?v=sjf9h9sx");
+  background-image: url("../images/home/book-bg.png?v=mal1imp3");
 }
 .section-call .row {
   -webkit-align-items: center;
@@ -997,10 +997,10 @@ h6 {
   border-radius: 300px 0 0 300px;
 }
 .section-case .carousel button .carousel-control-prev-icon {
-  background-image: url(../images/home/icon/arrow-left.svg?v=sjf9h9sx);
+  background-image: url(../images/home/icon/arrow-left.svg?v=mal1imp3);
 }
 .section-case .carousel button .carousel-control-next-icon {
-  background-image: url(../images/home/icon/arrow-right.svg?v=sjf9h9sx);
+  background-image: url(../images/home/icon/arrow-right.svg?v=mal1imp3);
 }
 .section-case .carousel .case-img {
   overflow: hidden;
